# wasynth

./: .gitignore  Cargo.toml  LICENSE
examples/: dump.rs  instrument.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: wasm_smith_instrument.rs  wasm_smith_parse.rs  wasm_smith_synth.rs
src/: bytes_trace.rs  instructions.rs  instrument.rs  lib.rs  parse.rs  synth.rs  wasm_types.rs
src/parse/: sections.rs
src/parse/sections/: code.rs  custom.rs  data.rs  data_count.rs  element.rs  export.rs  function.rs  global.rs  import.rs  memory.rs  name.rs  start.rs  table.rs  type.rs
src/synth/sections/: code.rs  custom.rs  data.rs  data_count.rs  element.rs  export.rs  function.rs  global.rs  import.rs  memory.rs  name.rs  start.rs  table.rs  type.rs
tests/: integration_test.rs
tests-gen/: Cargo.toml  build.rs
tests-gen/src/: lib.rs
tests/cases/: fib_log.wat  for.wat  one_plus_two.wat  wasynth_release.wasm
wasm-edit/: Cargo.toml
wasm-edit/src/: context.rs  instructions.rs  lib.rs  module.rs  types.rs
wasm-edit/src/types/: custom.rs  data.rs  element.rs  export.rs  function.rs  global.rs  import.rs
