[package]
name = "wasynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leb128 = "0.2.5"
log = "0.4.17"
thiserror = "1.0.38"

[dev-dependencies]
env_logger = "0.10.0"
quickcheck = "1.0.3"
tests-gen = { path = "tests-gen" }
wat = "1.0.56"

[workspace]
members = ["tests-gen"]

[features]
trace-read = []
